feat: P4PU-1075 added business logic to retrieve debtor installments (#33)
